# JsonParserPython

./: README.md  pyproject.toml
src/json_parser/: node.py  parser.py  token.py  tokenizer.py
tests/: test_parser.py  test_tokenizer.py
