[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json_parser"
version = "0.0.1"
authors = [{ name="Eugene B"}]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

